[B]Version 1.0.1[/B]
-add play this directory for youtube kids.

[B]Version 1.0.0[/B]
- Initial release